--- a/package.json
+++ b/package.json
@@ -8,12 +8,41 @@
     "start": "next start"
   },
   "dependencies": {
+    "autoprefixer": "^10.3.1",
     "date-fns": "^2.11.1",
+    "eslint": "^7.31.0",
+    "eslint-config-next": "^11.0.1",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-react": "^7.23.2",
+    "eslint-plugin-react-hooks": "^4.2.0",
     "gray-matter": "^4.0.2",
     "next": "^11.0.0",
+    "postcss": "^8.3.6",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-responsive-carousel": "^3.2.20",
     "remark": "^12.0.0",
-    "remark-html": "^12.0.0"
+    "remark-html": "^12.0.0",
+    "tailwindcss": "^2.2.7"
+  },
+  "devDependencies": {
+    "@types/node": "^16.4.1",
+    "@types/react": "^17.0.14",
+    "@typescript-eslint/eslint-plugin": "^4.28.4",
+    "eslint-config-next": "^11.0.1",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-prettier": "^3.4.0",
+    "eslint-plugin-react": "^7.23.2",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "prettier": "2.3.2",
+    "typescript": "^4.3.5"
+  },
+  "lint-staged": {
+    "src/**/*.{js,jsx}": [
+      "./node_modules/.bin/eslint --max-warnings=5",
+      "pretty-quick --staged"
+    ]
   }
 }
